tests/bad/typcheck0.tig
let
function nil_nil_nok (y:int, z:int): int =
    if nil = nil then y else z
in nil_nil_nok(0, 0)
end
